; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiChangeAllVLanMacAddressIfMachineChanged.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiChangeAllVLanMacAddressIfMachineChanged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHA1_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CiChangeAllVLanMacAddressIfMachineChanged(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %9 = load i32, i32* @SHA1_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %3, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %4, align 8
  %13 = load i32, i32* @SHA1_SIZE, align 4
  %14 = zext i32 %13 to i64
  %15 = alloca i32, i64 %14, align 16
  store i64 %14, i64* %5, align 8
  %16 = load i32, i32* @SHA1_SIZE, align 4
  %17 = zext i32 %16 to i64
  %18 = alloca i32, i64 %17, align 16
  store i64 %17, i64* %6, align 8
  %19 = load i32, i32* @SHA1_SIZE, align 4
  %20 = zext i32 %19 to i64
  %21 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %7, align 8
  %22 = load i32*, i32** %2, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %1
  store i32 1, i32* %8, align 4
  br label %57

25:                                               ; preds = %1
  %26 = call i32 @CiGetCurrentMachineHashNew(i32* %12)
  %27 = call i32 @CiGetCurrentMachineHash(i32* %15)
  %28 = call i32 @CiGetCurrentMachineHashOld(i32* %18)
  %29 = call i32 @CiReadLastMachineHash(i32* %21)
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = call i32 @CiWriteLastMachineHash(i32* %12)
  store i32 1, i32* %8, align 4
  br label %57

33:                                               ; preds = %25
  %34 = load i32, i32* @SHA1_SIZE, align 4
  %35 = call i64 @Cmp(i32* %21, i32* %18, i32 %34)
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = call i32 @CiWriteLastMachineHash(i32* %12)
  store i32 1, i32* %8, align 4
  br label %57

39:                                               ; preds = %33
  %40 = load i32, i32* @SHA1_SIZE, align 4
  %41 = call i64 @Cmp(i32* %21, i32* %15, i32 %40)
  %42 = icmp eq i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = call i32 @CiWriteLastMachineHash(i32* %12)
  store i32 1, i32* %8, align 4
  br label %57

45:                                               ; preds = %39
  %46 = load i32, i32* @SHA1_SIZE, align 4
  %47 = call i64 @Cmp(i32* %21, i32* %12, i32 %46)
  %48 = icmp eq i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %45
  store i32 1, i32* %8, align 4
  br label %57

50:                                               ; preds = %45
  %51 = call i32 @CiWriteLastMachineHash(i32* %12)
  %52 = icmp eq i32 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %50
  store i32 1, i32* %8, align 4
  br label %57

54:                                               ; preds = %50
  %55 = load i32*, i32** %2, align 8
  %56 = call i32 @CiChangeAllVLanMacAddress(i32* %55)
  store i32 0, i32* %8, align 4
  br label %57

57:                                               ; preds = %54, %53, %49, %43, %37, %31, %24
  %58 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %58)
  %59 = load i32, i32* %8, align 4
  switch i32 %59, label %61 [
    i32 0, label %60
    i32 1, label %60
  ]

60:                                               ; preds = %57, %57
  ret void

61:                                               ; preds = %57
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @CiGetCurrentMachineHashNew(i32*) #2

declare dso_local i32 @CiGetCurrentMachineHash(i32*) #2

declare dso_local i32 @CiGetCurrentMachineHashOld(i32*) #2

declare dso_local i32 @CiReadLastMachineHash(i32*) #2

declare dso_local i32 @CiWriteLastMachineHash(i32*) #2

declare dso_local i64 @Cmp(i32*, i32*, i32) #2

declare dso_local i32 @CiChangeAllVLanMacAddress(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
